--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+    html {
+    font-family: 'Fredoka One', cursive;
+    }}
