--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -10,24 +10,24 @@
     }}
 @layer components{
     .grid-cols-3 {
-        @apply grid-cols-3
+        @apply grid-cols-3;
     }
     .grid-cols-4 {
-        @apply grid-cols-4
+        @apply grid-cols-4;
     }
     .grid-cols-5 {
-        @apply grid-cols-5
+        @apply grid-cols-5;
     }
     .grid-cols-6 {
-        @apply grid-cols-6
+        @apply grid-cols-6;
     }
     .grid-cols-7 {
-        @apply grid-cols-7
+        @apply grid-cols-7;
     }
     .grid-cols-8 {
-        @apply grid-cols-8
+        @apply grid-cols-8;
     }
     .grid-cols-9 {
-        @apply grid-cols-9
+        @apply grid-cols-9;
     }
 }
