--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -9,22 +9,22 @@
     background-color: #fef6e7;
     }}
 @layer components{
-    .gride-cols-3 {
+    .grid-cols-3 {
         @apply grid-cols-3;
     }
-    .gride-cols-4 {
+    .grid-cols-4 {
         @apply grid-cols-4;
     }
-    .gride-cols-5 {
+    .grid-cols-5 {
         @apply grid-cols-5;
     }
-    .gride-cols-6 {
+    .grid-cols-6 {
         @apply grid-cols-6;
     }
-    .gride-cols-7 {
+    .grid-cols-7 {
         @apply grid-cols-7;
     }
-    .gride-cols-8 {
+    .grid-cols-8 {
         @apply grid-cols-8;
     }
     .gride-cols-9 {
